--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,14 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/housing
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
+server.port=8181
+spring.main.allow-circular-references=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.password=hbskkpoojxcgrkuu
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.username=smulili039@gmail.com
+logging.file.path=D:\Housing\Housing\spring.log
+
